# audium

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PKGBUILD  README.md  TODO  TODO.md
.github/: FUNDING.yaml
.github/workflows/: release.yaml  rust.yaml  rust.yml
docs/: beta.md  index.html
src/: app.rs  cli.rs  downloader.rs  filepicker.rs  lib.rs  library.rs  lyrics.rs  main.rs  modal.rs  nav.rs  numeric.rs  player.rs  settings.rs  ui.rs
src/actions/: mod.rs  track.rs
src/fstools/: select_file.rs
src/player/: audio_player.rs  mod.rs
src/tui/: mod.rs  tui.rs
src/ui/: layout.rs  lyrics_overlay.rs  mod.rs  overlay.rs  player_bar.rs  queue.rs  sidebar.rs  tracklist.rs
