[package]
name = "audium"
version = "1.2.0"
edition = "2024"
description = "A terminal music app"
authors = ["takashialpha <takashialpha@protonmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/takashialpha/audium"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0"
dirs-next = "2"
lofty = "0"
rand = "0"
ratatui = "0"
rodio = { version = "0", features = ["symphonia-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
