[package]
name = "audium"
version = "1.2.2"
edition = "2024"
description = "A terminal music app"
authors = ["takashialpha <takashialpha@protonmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/takashialpha/audium"
keywords = ["music", "app", "player", "tui", "terminal", "audio"]
categories = ["command-line-utilities", "multimedia::audio"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
xdg = "3"
lofty = "0"
rand = "0"
ratatui = { version = "0", default-features = false, features = [
  "crossterm",
  "layout-cache",
] }
rodio = { version = "0", default-features = false, features = [
  "playback",
  "symphonia-all",
  "dither",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
