[package]
name = "audium"
version = "2.0.0"
edition = "2024"
description = "A terminal music app"
authors = ["takashialpha <takashialpha@protonmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/takashialpha/audium"
keywords = ["music", "app", "player", "tui", "terminal", "audio"]
categories = ["command-line-utilities", "multimedia::audio"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
xdg = "3"
lofty = "0"
rand = "0"
rustc-hash = "2"
ratatui = { version = "0", default-features = false, features = [
  "crossterm",
  "layout-cache",
] }
rodio = { version = "0", default-features = false, features = [
  "playback",
  "symphonia-all",
  "symphonia-simd",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[lints.rust]
unsafe_code = "forbid"
warnings = "deny"

# Security
non_ascii_idents = "forbid"

# Deny old style Rust
rust_2018_idioms = { level = "deny", priority = -1 }
macro_use_extern_crate = "deny"
absolute_paths_not_starting_with_crate = "deny"

# Easy to read style and opinionated best practices
unused_qualifications = "deny"
explicit_outlives_requirements = "warn"
single_use_lifetimes = "warn"

# General cleanliness and cleanup
unused_macro_rules = "warn"
unused_extern_crates = "deny"
unused_lifetimes = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

# Not actionable in this repo: flags duplicate transitive dependency versions
# pulled in via our dependency tree (rodio/cpal/lofty et al).
multiple_crate_versions = "allow"

# Selected `clippy::restriction` lints (not enabled as a group: many of its
# lints actively conflict with each other or with pedantic/nursery choices
# above).
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
exit = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
get_unwrap = "deny"
unwrap_in_result = "deny"
mem_forget = "deny"
verbose_file_reads = "deny"
empty_drop = "deny"
float_cmp_const = "deny"
large_include_file = "deny"
rc_buffer = "deny"
rest_pat_in_fully_bound_structs = "deny"
same_name_method = "deny"
empty_structs_with_brackets = "deny"
format_push_string = "deny"
redundant_type_annotations = "deny"
semicolon_outside_block = "deny"
undocumented_unsafe_blocks = "deny"
unneeded_field_pattern = "deny"
mod_module_files = "deny"
unused_async = "deny"
